[gd_scene format=3 uid="uid://c65qaeb4qcwhk"]

[ext_resource type="Script" uid="uid://dpv81pvy7770e" path="res://scripts/app_interface.gd" id="1_fmfq2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5q87"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3i7o8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r706y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7702s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5jiu2"]

[node name="Control" type="Control" unique_id=1764444053]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fmfq2")

[node name="ColorRect" type="ColorRect" parent="." unique_id=47064107]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=504596034]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer" unique_id=1551062532]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="HeaderLabel" type="Label" parent="VBoxContainer/MarginContainer" unique_id=1391898798]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=372311643]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_j5q87")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer" unique_id=59154297]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer2" unique_id=1849244304]
layout_mode = 2
theme_override_constants/margin_left = 232
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 232
theme_override_constants/margin_bottom = 70

[node name="MainTimerLabel" type="Label" parent="VBoxContainer/VBoxContainer2/MarginContainer" unique_id=452718808]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "00:00"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer" unique_id=917453539]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_3i7o8")

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer" unique_id=2046268755]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer5" unique_id=553238350]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_r706y")

[node name="WorkButton" type="Button" parent="VBoxContainer/HBoxContainer5" unique_id=357638944]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Work"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HBoxContainer5" unique_id=520699028]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_7702s")

[node name="BreakButton" type="Button" parent="VBoxContainer/HBoxContainer5" unique_id=786316327]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Break"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HBoxContainer5" unique_id=441492243]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_5jiu2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=1618994530]
